--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -42,33 +42,8 @@
             <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
               редактировать запись
             </a>
-            {% endif %}
-          {% if request.user.is_authenticated %}
-            <div class="card my-4">
-              <h5 class="card-header">{{ comment_form.text.help_text }}</h5>              
-              <div class="card-body">                
-                <form method="post" action="{% url 'posts:add_comment' post.id %}">
-                  {% csrf_token %}     
-                  <div class="form-group mb-2">
-                    {{ comment_form.text|addclass:'form-control' }}
-                  </div>
-                  <button type="submit" class="btn btn-primary">Отправить</button>
-                </form>
-              </div>
-            </div>
-            {% endif %}
-          {% for comment in comments_all %}
-            <div class="media mb-4">
-              <div class="media-body">
-                <h5 class="mt-0">
-                  <a href="{% url 'posts:profile' comment.author.username %}">
-                    {{ comment.author }}
-                  </a>
-                </h5>
-                <p>{{ comment.text }}</p>
-              </div>
-            </div>
-          {% endfor %}
+          {% endif %}
+          {% include 'includes/comments.html' %}          
         </article>
       </div>
     </div>
