--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -21,7 +21,7 @@
                 {% endif %}          
               </div>
               <div class="card-body">        
-                <form method="post" enctype="multipart/form-data">                  
+                <form method="post" action="{% url 'posts:post_create' %}" enctype="multipart/form-data">                  
                   <input type="hidden" name="csrfmiddlewaretoken" value="">
                   {% csrf_token %}
                   {% for field in form %}
